integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_burn_v2__burn.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 507
expression: asset_after_transfer
---
{
  "interface": "V1_NFT",
  "id": "74jWt9uZrs6aJ1eEqswhSMSbJYTnysiAuBjYgh6ikcAD",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "JA6TSfMeRkduhEnKk866aTsLkL1iJfa7WZTZsoyj393f",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "9hDh1MCJHiDTogaaSVagGexpN4gLEqZK3uXxfUwXLvdb",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "HrHxHBiRYWjvFHPuhRaoTqL9mBjHeZvP9vStPUSfTaFM",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "4ykTwEbBc5r6g3AMGYcf92EKe61puHixEyoV1dEvxDMV",
    "tree": "CciCDqnEuTA49hYBRRoETRjdhmTPkiMJQA1pbUz9sZPu",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "Cg66mzkLNEGo4ijY9rs5SgsUCq1dxKrAv8XFuTGTzGxt",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "FSE5c66MpzLtXBtopLBBi5fpGp2wdNzzCHBvxJpP1gnr"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": true
}
